# axum-boilerplate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20240101000001_create_users_table.sql
src/: main.rs
src/config/: mod.rs
src/handlers/: auth.rs  users.rs
src/middleware/: auth.rs  logging.rs
src/repositories/: user.rs
src/utils/: errors.rs  jwt.rs  mod.rs  password.rs  validation.rs
